# jenosize-ai-content

./: .dockerignore  .env.example  .env.production.template  .env.template  .gitignore  APPROACH.md  ARCHITECTURE.md  ASSIGNMENT_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  Dockerfile  EVALUATION_CHECKLIST.md  EXECUTE_FINETUNING.md  LIVE_DEMO_URLS_TEMPLATE.txt  QUICKSTART.md  QUICK_DEPLOY.md  RAILWAY_ENV_CHECKLIST.md  RAILWAY_SETUP_INSTRUCTIONS.md  README.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  SCALABILITY.md  START_HERE.md  check_finetune_status.py  docker-compose.yml  nixpacks.toml  railway.json  setup-verify.bat  setup-verify.sh  vercel.json
backend/: .dockerignore  BACKEND_README.md  Dockerfile  QUICKSTART_BACKEND.md  README.md  pyproject.toml  requirements-finetuning.txt  start.sh
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  config_cloud.py  constants.py  logging.py
backend/app/models/: __init__.py  article.py  common.py
backend/app/routers/: __init__.py  article.py  health.py
backend/app/services/: __init__.py  base_service.py  content_generator.py  langchain_service.py  qdrant_service.py
backend/app/utils/: __init__.py  init_data.py
backend/scripts/: finetune_gpt4o_mini.py  finetune_local.py  finetune_openai.py  init_database.py  scrape_jenosize_articles.py  start.bat  start.sh  test_api.py
data/finetuning/: finetuning_state.json  finetuning_state_gpt4o_mini.json  jenosize_articles.csv  jenosize_articles.json  jenosize_finetuning.jsonl
data/samples/: .gitkeep  sample_articles.json
frontend/: .dockerignore  .eslintrc.json  ARCHITECTURE.md  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json  verify-installation.sh
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: ArticleDisplay.tsx  ArticleGenerationForm.tsx  ErrorDisplay.tsx  KeywordInput.tsx  LoadingSpinner.tsx  StatusBadge.tsx
frontend/hooks/: useArticleGeneration.ts  useHealthCheck.ts  useSupportedOptions.ts
frontend/lib/: api-client.ts  api-constants.ts  constants.ts  types.ts  utils.ts  validation.ts
tests/: requirements.txt
tests/scripts/: initialize_qdrant.py  initialize_qdrant_cloud.py  run_all_tests.py  test_backend_api.py  test_e2e.py  verify_docker_setup.py
