[tool.poetry]
name = "jenosize-ai-backend"
version = "1.0.0"
description = "Jenosize AI Content Generation Backend - FastAPI service for generating trend and future ideas articles"
authors = ["Jenosize AI Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# LangChain & AI
langchain = "^0.1.4"
langchain-anthropic = "^0.1.1"
langchain-community = "^0.0.16"
langchain-openai = "^0.0.5"

# Anthropic Claude API
anthropic = "^0.40.0"

# Local Embeddings (no API key needed)
sentence-transformers = "^2.3.0"

# Vector Database
qdrant-client = "^1.7.3"

# Data Processing
tiktoken = "^0.5.2"
numpy = "^1.26.3"
pandas = "^2.1.4"

# HTTP Client
httpx = "^0.26.0"
aiohttp = "^3.9.1"

# Utilities
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Validation & Data Models
email-validator = "^2.1.0"
phonenumbers = "^8.13.27"

# Logging & Monitoring
loguru = "^0.7.2"
python-json-logger = "^2.0.7"

# Rate Limiting & Caching
slowapi = "^0.1.9"
cachetools = "^5.3.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"

# Code Quality
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

# Development Tools
ipython = "^8.20.0"
ipdb = "^0.13.13"
pre-commit = "^3.6.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
